# x-rat

./: .gitignore  CHEESE.md  CMakeLists.txt  COPYING  main.cpp
client/: CMakeLists.txt  x-rat-client-main.cpp  x-rat-client-main.h  x-rat-client.cpp  x-rat-client.h
common/: CMakeLists.txt
common/include/: AESCTREncryptionProvider.h  AESGCMEncryptionProvider.h  AbstractEncryptionProvider.h  AbstractKeyManager.h  AbstractUserManager.h  CheesePacket.h  EncodeManager.h  EncryptionManager.h  ForwardManager.h  PacketChainManager.h  PacketDecoder.h  PacketEncoder.h  PacketManipulator.h  PacketVector.h  RandomPool.h  SingleKeyManager.h  Utilities.h  XfrmManager.h  x_rat_common.h
common/src/: AESCTREncryptionProvider.cpp  AESGCMEncryptionProvider.cpp  AbstractEncryptionProvider.cpp  AbstractKeyManager.cpp  AbstractUserManager.cpp  EncodeManager.cpp  EncryptionManager.cpp  ForwardManager.cpp  PacketChainManager.cpp  PacketDecoder.cpp  PacketEncoder.cpp  PacketManipulator.cpp  PacketVector.cpp  RandomPool.cpp  SingleKeyManager.cpp  Utilities.cpp  XfrmManager.cpp  x_rat_common.cpp
peer/: CMakeLists.txt  x_rat_peer.cpp  x_rat_peer.h
server/: CMakeLists.txt  ConnectionInfo.h  ConnectionMap.cpp  ConnectionMap.h  IPv4BitMap.cpp  IPv4BitMap.h  IPv6BitMap.cpp  IPv6BitMap.h  XRatServer.cpp  XRatServer.h  x-rat-server-main.cpp  x-rat-server-main.h  x-rat-server.cpp  x-rat-server.h
test/: CMakeLists.txt  IPv4BitMapTest.h  UtilitiesTest.h  main.cpp
