cmake_minimum_required(VERSION 3.5)
project(x-rat)

set(CMAKE_MODULE_PATH  ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules)

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

set(XRAT_BASE_VERSION_MAJOR 1)
set(XRAT_BASE_VERSION_MINOR 0)
set(XRAT_BASE_VERSION_PATCH 5)
set(XRAT_BASE_VERSION "${XRAT_BASE_VERSION_MAJOR}.${XRAT_BASE_VERSION_MINOR}.${XRAT_BASE_VERSION_PATCH}")

find_package(MbedTLS REQUIRED)

add_subdirectory(common)
add_subdirectory(client)
add_subdirectory(server)
add_subdirectory(peer)
