cmake_minimum_required(VERSION 3.5)
project(x-rat)

enable_testing()

set(CMAKE_MODULE_PATH  ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules)

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

set(XRAT_BASE_VERSION_MAJOR 1)
set(XRAT_BASE_VERSION_MINOR 0)
set(XRAT_BASE_VERSION_PATCH 5)
set(XRAT_BASE_VERSION "${XRAT_BASE_VERSION_MAJOR}.${XRAT_BASE_VERSION_MINOR}.${XRAT_BASE_VERSION_PATCH}")

set(CMAKE_THREAD_PREFER_PTHREAD TRUE)

IF(CMAKE_COMPILER_IS_GNUCC)
    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0")
    set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0")
ENDIF(CMAKE_COMPILER_IS_GNUCC)

find_package(MbedTLS REQUIRED)
find_package(Threads REQUIRED)
find_package(TBB REQUIRED)

set(MALLOC_LIB ${TBB_MALLOC_PROXY_LIBRARY})

include_directories(SYSTEM ${TBB_INCLUDE_DIRS})

add_subdirectory(common)
add_subdirectory(client)
add_subdirectory(server)
add_subdirectory(peer)
add_subdirectory(test)

add_test(${PROJECT_NAME} test/x-rat_test)
set_tests_properties(${PROJECT_NAME} PROPERTIES DEPENDS x-rat_test)
